# web/docs/swagger.json
@@ -7,6 +7,9 @@
     "paths": {
         "/account": {
             "get": {
+                "tags": [
+                    "account"
+                ],
                 "responses": {
                     "200": {
                         "description": "An example resource"
@@ -21,6 +24,9 @@
         },
         "/account/like": {
             "get": {
+                "tags": [
+                    "account"
+                ],
                 "operationId": "app\\controllers\\AccountController::actionLike",
                 "responses": {
                     "200": {
@@ -36,6 +42,9 @@
         },
         "/auth/register": {
             "post": {
+                "tags": [
+                    "auth"
+                ],
                 "responses": {
                     "200": {
                         "description": "An example resource"
@@ -45,6 +54,9 @@
         },
         "/auth/login": {
             "get": {
+                "tags": [
+                    "auth"
+                ],
                 "responses": {
                     "200": {
                         "description": "An example resource"
@@ -57,8 +69,11 @@
                 ]
             }
         },
-        "/like/create": {
+        "/like": {
             "get": {
+                "tags": [
+                    "like"
+                ],
                 "responses": {
                     "200": {
                         "description": "An example resource"
@@ -73,6 +88,9 @@
         },
         "/posts": {
             "get": {
+                "tags": [
+                    "post"
+                ],
                 "responses": {
                     "200": {
                         "description": "All posts"
@@ -80,6 +98,9 @@
                 }
             },
             "post": {
+                "tags": [
+                    "post"
+                ],
                 "responses": {
                     "200": {
                         "description": "New posts"
@@ -92,32 +113,11 @@
                 ]
             }
         },
-        "/posts/{id}": {
-            "get": {
-                "operationId": "app\\controllers\\PostController::actions",
-                "responses": {
-                    "200": {
-                        "description": "Detail posts"
-                    }
-                }
-            }
-        },
-        "/posts/tag": {
-            "post": {
-                "responses": {
-                    "200": {
-                        "description": "Add tag to posts"
-                    }
-                },
-                "security": [
-                    {
-                        "api_key": []
-                    }
-                ]
-            }
-        },
         "/subscription": {
             "get": {
+                "tags": [
+                    "subscription"
+                ],
                 "operationId": "app\\controllers\\SubscriptionController::actionIndex",
                 "responses": {
                     "200": {
@@ -133,6 +133,9 @@
         },
         "/subscription/create": {
             "post": {
+                "tags": [
+                    "subscription"
+                ],
                 "responses": {
                     "200": {
                         "description": "An example resource"
@@ -147,9 +150,15 @@
         }
     },
     "components": {
-        "responses": {
-            "account": {
-                "description": "an \"unexpected\" error"
+        "schemas": {
+            "Posts": {
+                "properties": {
+                    "title": {
+                        "description": "The Posts title",
+                        "type": "string"
+                    }
+                },
+                "type": "object"
             }
         },
         "securitySchemes": {
